--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.netflix.eureka</groupId>
+			<artifactId>eureka-core</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -128,7 +133,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-
+				<version>${project.parent.version}</version>
 				<configuration>
 					<excludes>
 						<exclude>
