--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/ubi-user-service
+    url: jdbc:postgresql://localhost:5432/ubi_kvms_user
     username: postgres
     password: root
 
