--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/ubi_kvms_user
+    url: jdbc:postgresql://localhost:5432/ubi_kvms_master
     username: postgres
     password: root
 
@@ -18,4 +18,4 @@ spring:
       fail-on-empty-beans: false
 
   config:
-    import: optional:configserver:https://localhost:8888
+    import: optional:configserver:http://localhost:8888
